[package]
name = "icaa-scripts"
version = "0.1.0"
edition = "2021"
authors = ["Adair <adair@abstract.money>"]
repository = "https://github.com/AbstractSDK/cw-orchestrator"

[lib]

[features]
rpc = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cw-orch = { version = "0.19.1", features = ["daemon"] }
cw-orch-interchain = { version = "0.19.1", features = [
  "daemon",
], path = "../cw-orch-interchain/cw-orch" }
#cw-orch = { features = ["daemon"], git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "update/add-rpc-support" }
# update/add-rpc-support-38
abstract-interface = { version = "0.20.0", features = ["daemon"] }
abstract-client = { version = "0.20.0" }
abstract-core = { version = "0.20.0" }
cosmwasm-std = { version = "1.5.0" }


#cw-orch = { version = "0.16.1", path = "../../Abstract/cw-orchestrator/cw-orch", features = ["daemon"] }
#cw-orch-daemon = { features = ["rpc"], git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "update/add-rpc-support" }


#abstract-core = { version = "0.19.2" }
anyhow = "1"
tokio = { version = "1.4", features = ["full"] }
log = "0.4.14"
# Deps for deployment
dotenv = { version = "0.15.0" }           # Enables loading of .env files
pretty_env_logger = { version = "0.5.0" } # Enables logging to stdout and prettifies it

#[patch.crates-io]
#cw-orch = { git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "update/add-rpc-support" }
#cw-orch-core = { git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "update/add-rpc-support" }
